--- a/index.html
+++ b/index.html
@@ -68,12 +68,303 @@
       </section>
 
       <section class="tekst">
-        <div class="teksten">
-          <details class="eten">
+        
+        <div id="teksten" class="lijsten">
+          <h2>Teksten</h2>
+          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan kan genieten.</p>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
             <summary>eten</summary>
             ik hou van eten
           </details>
         </div>
+
+        <div id="globale-code" class="lijsten">
+          <h2>Globale code</h2>
+          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan kan genieten.</p>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+        </div>
+
+        <div id="toetsenbord" class="lijsten">
+          <h2>Toetsenbord</h2>
+          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan kan genieten.</p>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+        </div>
+
+        <div id="afbeeldingen" class="lijsten">
+          <h2>Afbeeldingen</h2>
+          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan kan genieten.</p>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+        </div>
+
+        <div id="koppen" class="lijsten">
+          <h2>Koppen</h2>
+          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan kan genieten.</p>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+        </div>
+
+        <div class="lijsten" class="lijsten">
+          <h2>Lijsten</h2>
+          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan kan genieten.</p>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+        </div>
+
+        <div id="controls" class="lijsten">
+          <h2>Controls</h2>
+          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan kan genieten.</p>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+        </div>
+
+        <div id="tabellen" class="lijsten">
+          <h2>Tabellen</h2>
+          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan kan genieten.</p>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+          <details class="afbeeldingen-tekst">
+            <summary>eten</summary>
+            ik hou van eten
+          </details>
+        </div>
+
       </section>
     </main>
     
