--- a/index.html
+++ b/index.html
@@ -17,13 +17,8 @@
 
     <img class="vervoerders" src="assets/openbaarvervoer.jpg" alt="Foto van vervoerders" />
 
-    <h1 class="header_title">Toegankelijkheids tool</h1>
+    <h1 class="header_title">Jouw website voor iedereen toegankelijk.</h1>
     <section class="intro">
-      <p class="introductie">
-        Een tool om jouw website toegankelijker te maken voor mensen met
-        beperkingen. Deze tool voldoet aan de WCAG richtlijnen, en heeft het
-        Toegankelijkheids niveau AA
-      </p>
       <p>hallo</p>
     </section>
     </section>
@@ -55,7 +50,7 @@
             <li class="side-nav-text">
               <a href="#afbeeldingen">Afbeeldingen</a>
             </li>
-            <img class="logo2" src="assets/VA-logo.jpg" alt="">
+            <img class="logo2" src="assets/logo2.png" alt="">
             <li class="side-nav-text terug-naar-boven">
               <a href="#logo">Terug naar boven</a>
             </li>
@@ -78,7 +73,17 @@
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Gebruik koppen die het onderwerp of doel van de onderliggende tekst beschrijven</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div class="inhoud-tekst">De koppen op een webpagina moeten het onderwerp of doel van de onderliggende tekst
+            beschrijven. Zorg dat elke kop iets zegt over de tekst die eronder staat. Een beschrijvende kop maakt het
+            voor iedereen makkelijker om informatie op een pagina te vinden. Alle koppen samen horen een goed beeld te
+            geven van de inhoud van de webpagina. Zo kunnen bezoekers snel de structuur van een webpagina of tekst
+            herkennen.
+            <br> <br>
+            Een kop moet altijd onderliggende inhoud hebben.
+            <br> <br>
+            Bezoekers die gebruik maken van een schermlezer kunnen een lijst van alle koppen gebruiken om over de
+            webpagina te navigeren. Zij kunnen eventueel ook gelijk springen naar de volgende kop.
+          </div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Zorg dat koppen zijn opgemaakt met een kop-element</summary>
