--- a/index.html
+++ b/index.html
@@ -341,14 +341,16 @@
     <section id="share-button">
       <div id="share-icon">
         <share-action class="gc-analytics-event fab" authors="@medleyjp" data-action="click" data-category="web.dev"
-          data-icon="share" data-label="share, share" data-type="primary" role="button" tabindex="0"> <svg
-            viewBox="0 0 24 24" height="45" width="45" xmlns="http://www.w3.org/2000/svg">
+          data-icon="share" data-label="share, share" data-type="primary" role="button" tabindex="0"
+          aria-label="share button"> <svg viewBox="0 0 24 24" height="45" width="45" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 0h24v24H0V0z" fill="none"></path>
             <path
               d="M18 16.1c-.8 0-1.4.3-2 .8l-7.1-4.2c.1-.2.1-.5.1-.7s0-.5-.1-.7L16 7.2c.5.5 1.2.8 2 .8 1.7 0 3-1.3 3-3s-1.3-3-3-3-3 1.3-3 3c0 .2 0 .5.1.7L8 9.8C7.5 9.3 6.8 9 6 9c-1.7 0-3 1.3-3 3s1.3 3 3 3c.8 0 1.5-.3 2-.8l7.1 4.2c-.1.2-.1.4-.1.6 0 1.6 1.3 2.9 2.9 2.9s2.9-1.3 2.9-2.9-1.2-2.9-2.8-2.9z"
               fill="white"></path>
+
+          </svg> </share-action>
       </div>
-      </svg> <span class="fab__label">Share</span> </share-action>
+      <span class="fab__label">Share</span>
     </section>
 
   </main>
