--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       <section class="secties">
         <div id="teksten" class="lijsten">
           <h2>Teksten</h2>
-          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen
+          <p class="intro-tekst">Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te
+            zorgen dat iedereen
             ervan kan genieten.</p>
           <details class="teksten-tekst alle-tekst">
             <summary>Geef webpagina's een titel die het onderwerp of doel van de pagina beschrijft</summary>
@@ -120,7 +121,8 @@
 
         <div id="ontwerp" class="lijsten">
           <h2>Ontwerp</h2>
-          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen
+          <p class="intro-tekst">Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te
+            zorgen dat iedereen
             ervan kan genieten.</p>
           <details class="ontwerp-tekst alle-tekst">
             <summary>Gebruik genoeg contrast voor tekst</summary>
@@ -148,7 +150,8 @@
       <section class="secties">
         <div id="navigatie" class="lijsten">
           <h2>Navigatie</h2>
-          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen
+          <p class="intro-tekst">Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te
+            zorgen dat iedereen
             ervan kan genieten.</p>
           <details class="navigatie-tekst alle-tekst">
             <summary>Geef webpagina's een titel die het onderwerp of doel van de pagina beschrijft</summary>
@@ -174,7 +177,8 @@
 
         <div id="media" class="lijsten">
           <h2>Media</h2>
-          <p>media zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen ervan
+          <p class="intro-tekst">media zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen
+            dat iedereen ervan
             kan
             genieten.</p>
           <details class="media-tekst alle-tekst">
@@ -212,7 +216,8 @@
       <section class="secties">
         <div id="formulieren" class="lijsten">
           <h2>Formulieren</h2>
-          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen
+          <p class="intro-tekst">Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te
+            zorgen dat iedereen
             ervan kan genieten.</p>
           <details class="formulieren-tekst alle-tekst">
             <summary>Zorg voor duidelijke labels en instructies bij invoervelden</summary>
@@ -254,7 +259,8 @@
 
         <div id="bediening" class="lijsten">
           <h2>Bediening</h2>
-          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen
+          <p class="intro-tekst">Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te
+            zorgen dat iedereen
             ervan kan genieten.</p>
           <details class="bediening-tekst alle-tekst">
             <summary>Zorg dat alle functies te bereiken en gebruiken zijn met alleen het toetsenbord</summary>
@@ -284,7 +290,8 @@
       <section class="secties">
         <div id="afbeeldingen" class="lijsten">
           <h2>Afbeeldingen</h2>
-          <p>Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te zorgen dat iedereen
+          <p class="intro-tekst">Afbeeldingen zijn een veel voorkomend onderdeel van de meeste websites. Help ervoor te
+            zorgen dat iedereen
             ervan kan genieten.</p>
           <details class="afbeeldingen-tekst alle-tekst">
             <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
