--- a/index.html
+++ b/index.html
@@ -340,9 +340,11 @@
     <section class="footer-tel">
       <section id="back-to-top">
         <div id="back-up">
-          <svg width="45" height="45" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M15 20H9V12H4.16L12 4.16L19.84 12H15V20Z" fill="white" />
-          </svg>
+          <a href="#logo">
+            <svg width="45" height="45" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M15 20H9V12H4.16L12 4.16L19.84 12H15V20Z" fill="white" />
+            </svg>
+          </a>
         </div>
         <span class="fab__label">Terug naar boven</span>
       </section>
@@ -364,8 +366,6 @@
     </section>
 
   </main>
-
-  <footer class="footer"></footer>
 </body>
 
 </html>
