--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <section class="intro">
       <p>hallo</p>
     </section>
-    </section>
   </header>
   <main>
     <section class="side-nav">
@@ -50,6 +49,10 @@
             </li>
             <li class="side-nav-text">
               <a href="#afbeeldingen">Afbeeldingen</a>
+            </li>
+            <li class="side-nav-text">
+              <input id="searchbar" class="searchbar" onkeyup="search_animal()" type="text" name="search"
+                placeholder="zoek..">
             </li>
           </ul>
         </nav>
