--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a href="#afbeeldingen">Afbeeldingen</a>
             </li>
             <li class="side-nav-text">
-              <input id="searchbar" class="searchbar" onkeyup="search_animal()" type="text" name="search"
+              <input id="searchbar" class="searchbar" onkeyup="search_element()" type="text" name="search"
                 placeholder="zoek..">
             </li>
           </ul>
@@ -69,11 +69,11 @@
           ervan kan genieten.</p>
         <details class="teksten-tekst alle-tekst">
           <summary>Geef webpagina's een titel die het onderwerp of doel van de pagina beschrijft</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Gebruik koppen die het onderwerp of doel van de onderliggende tekst beschrijven</summary>
-          <div class="inhoud-tekst">De koppen op een webpagina moeten het onderwerp of doel van de onderliggende tekst
+          <div id="inside">De koppen op een webpagina moeten het onderwerp of doel van de onderliggende tekst
             beschrijven. Zorg dat elke kop iets zegt over de tekst die eronder staat. Een beschrijvende kop maakt het
             voor iedereen makkelijker om informatie op een pagina te vinden. Alle koppen samen horen een goed beeld te
             geven van de inhoud van de webpagina. Zo kunnen bezoekers snel de structuur van een webpagina of tekst
@@ -87,32 +87,32 @@
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Zorg dat koppen zijn opgemaakt met een kop-element</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Zorg dat lijsten zijn opgemaakt met een lijst-element</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Zorg dat tabellen zijn opgemaakt met een tabel-element</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Geef links een linktekst die het doel van de link beschrijft</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Gebruik in instructies geen onderdelen die alleen worden aangeduid met kleur, vorm of locatie
           </summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Geef de taal van de pagina aan</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Geef de taal aan van tekst die in een andere taal is geschreven</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
       </div>
 
@@ -123,23 +123,23 @@
           ervan kan genieten.</p>
         <details class="ontwerp-tekst alle-tekst">
           <summary>Gebruik genoeg contrast voor tekst</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="ontwerp-tekst alle-tekst">
           <summary>Zorg voor een duidelijk zichtbare focus indicator</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="ontwerp-tekst alle-tekst">
           <summary>Gebruik naast kleur ook andere manieren om informatie over te brengen</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="ontwerp-tekst alle-tekst">
           <summary>Plaats pagina-onderdelen op iedere pagina in een vaste volgorde</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="ontwerp-tekst alle-tekst">
           <summary>Zorg dat herhalende componenten met dezelfde functie telkens hetzelfde worden benoemd</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
       </div>
 
@@ -150,23 +150,23 @@
           ervan kan genieten.</p>
         <details class="navigatie-tekst alle-tekst">
           <summary>Geef webpagina's een titel die het onderwerp of doel van de pagina beschrijft</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="navigatie-tekst alle-tekst">
           <summary>Geef links een linktekst die het doel van de link beschrijft</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="navigatie-tekst alle-tekst">
           <summary>Zorg dat herhalende blokken op een pagina overgeslagen kunnen worden</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="navigatie-tekst alle-tekst">
           <summary>Zorg voor meerdere manieren om een pagina te vinden</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="navigatie-tekst alle-tekst">
           <summary>Plaats pagina-onderdelen op iedere pagina in een vaste volgorde</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
       </div>
 
@@ -178,32 +178,32 @@
           genieten.</p>
         <details class="media-tekst alle-tekst">
           <summary>Geef media een kort tekstalternatief</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="media-tekst alle-tekst">
           <summary>Plaats een transcript bij geluidsfragmenten en bewegende beelden</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="media-tekst alle-tekst">
           <summary>Voeg ondertitels toe aan filmpjes</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="media-tekst alle-tekst">
           <summary>Voeg een audiodescriptie toe aan filmpjes</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="media-tekst alle-tekst">
           <summary>Zorg dat geluid automatisch begint te spelen en uitgezet kan worden of binnen 3 seconden stopt
           </summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="media-tekst alle-tekst">
           <summary>Zorg dat bewegende content kan worden gepauzeerd, gestopt of worden uitgezet</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="media-tekst alle-tekst">
           <summary>Gebruik geen content dat meer dan 3 keer per seconde flitst</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
       </div>
 
@@ -214,39 +214,39 @@
           ervan kan genieten.</p>
         <details class="formulieren-tekst alle-tekst">
           <summary>Zorg voor duidelijke labels en instructies bij invoervelden</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="formulieren-tekst alle-tekst">
           <summary>Als veelgevraagde gegevens worden verzameld in een invoerveld, zorg dan dat het doel in de code is
             vastgelegd</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="formulieren-tekst alle-tekst">
           <summary>Als een formulierveld verkeerd is ingevuld, benoem dan waar de fout zit en beschrijf wat de fout is
           </summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="formulieren-tekst alle-tekst">
           <summary>Als een formulierveld verkeerd is ingevuld, geef suggesties ter verbetering als dit mogelijk is
           </summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="formulieren-tekst alle-tekst">
           <summary>Zorg voor een extra controle bij het insturen van belangrijke formulieren</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="formulieren-tekst alle-tekst">
           <summary>Zorg dat een tijdslimiet kan worden uitgezet, aangepast of worden verlengt</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="formulieren-tekst alle-tekst">
           <summary>Maak bezoekers bewust van veranderingen in de inhoud</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="formulieren-tekst alle-tekst">
           <summary>Laat een formulierveld dat focus krijgt of ingevuld wordt niet zomaar een grote gebeurtenis in gang
             zetten</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
       </div>
 
@@ -257,25 +257,25 @@
           ervan kan genieten.</p>
         <details class="bediening-tekst alle-tekst">
           <summary>Zorg dat alle functies te bereiken en gebruiken zijn met alleen het toetsenbord</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="bediening-tekst alle-tekst">
           <summary>Zorg dat een bezoeker die alleen het toetsenbord gebruikt niet vast komt te zitten op de pagina
           </summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="bediening-tekst alle-tekst">
           <summary>Geef bezoekers de mogelijkheid om sneltoetsen zelf in te stellen of uit te zetten</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="bediening-tekst alle-tekst">
           <summary>Zorg voor een eenvoudige bediening voor acties die door aanraking of gebaren worden geactiveerd
           </summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="bediening-tekst alle-tekst">
           <summary>Gebruik niet alleen apparaatbewegingen voor het uitvoeren van een actie</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
       </div>
 
@@ -286,32 +286,32 @@
           ervan kan genieten.</p>
         <details class="afbeeldingen-tekst alle-tekst">
           <summary>Zorg dat afbeeldingen in de code een tekstalternatief kunnen krijgen</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="afbeeldingen-tekst alle-tekst">
           <summary>Geef afbeeldingen die informatie overdragen een beschrijvend tekstalternatief</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="afbeeldingen-tekst alle-tekst">
           <summary>Geef complexe afbeeldingen een langere beschrijving</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="afbeeldingen-tekst alle-tekst">
           <summary>Geef afbeeldingen die ook een link zijn een tekstalternatief dat het doel van de link beschrijft
           </summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="afbeeldingen-tekst alle-tekst">
           <summary>Zorg dat decoratieve afbeeldingen door hulptechnologieën genegeerd kunnen worden</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="afbeeldingen-tekst alle-tekst">
           <summary>Gebruik geen afbeeldingen van tekst</summary>
-          <div class="inhoud-tekst">ik hou van eten</div>
+          <div id="inside">ik hou van eten</div>
         </details>
         <details class="afbeeldingen-tekst alle-tekst">
           <summary>Zorg dat bewegende content kan worden gepauzeerd, gestopt of worden uitgezet</summary>
-          <div class="inhoud-tekst">Zorg dat alle bewegende, scrollende of knipperende content dat automatisch start
+          <div id="inside">Zorg dat alle bewegende, scrollende of knipperende content dat automatisch start
             én
             langer dan 5 seconden duurt kan worden gepauzeerd, gestopt of worden uitgezet. Onder bewegende, scrollende
             of knipperende content vallen onder andere carrousels, animaties op de pagina, bewegende advertenties,
@@ -326,7 +326,7 @@
         </details>
         <details class="afbeeldingen-tekst alle-tekst">
           <summary>Gebruik geen content dat meer dan 3 keer per seconde flitst</summary>
-          <div class="inhoud-tekst">
+          <div id="inside">
             <p>Gebruik geen flitsende content. Laat onderdelen in elk geval niet meer dan 3 keer per seconde flitsen.
               Bezoekers met bepaalde vormen van epilepsie kunnen een aanval krijgen als ze kijken naar knipperende of
               flitsende afbeeldingen of media.</p>
