--- a/index.html
+++ b/index.html
@@ -69,7 +69,61 @@
           ervan kan genieten.</p>
         <details class="teksten-tekst alle-tekst">
           <summary>Geef webpagina's een titel die het onderwerp of doel van de pagina beschrijft</summary>
-          <div id="inside">ik hou van eten</div>
+          <div id="inside">
+            <p>De paginatitel van een webpagina moet het onderwerp of doel van de pagina beschrijven. Een beschrijvende
+              paginatitel maakt het voor iedereen makkelijker om te navigeren door de website. Paginatitels worden
+              getoond in het venster van de browser of in het tabblad van de pagina. Met een goede paginatitel kunnen
+              bezoekers de pagina gemakkelijk terugvinden als er bijvoorbeeld meerdere tabbladen open staan.</p>
+
+
+
+            <p>Goede paginatitels:</p>
+
+
+
+            <ul>
+              <li>beschrijven duidelijk het onderwerp of doel van de pagina.</li>
+              <li>veranderen als een nieuwe pagina wordt ingeladen.</li>
+              <li>hebben de unieke informatie vooraan.</li>
+              <li>zijn uniform met de andere pagina&#8217;s.</li>
+              <li>zijn beknopt.</li>
+              <li>zijn uniek.</li>
+            </ul>
+
+
+
+            <p>Paginatitels worden door hulptechnologieën gebruikt om de webpagina aan te duiden. Deze informatie wordt
+              als eerst gepresenteerd bij het openen van een pagina.</p>
+
+
+
+            <p>Gebruik het <code>title</code>-element in het <code>&lt;head&gt;</code>-element in de code van de pagina.
+              Beschrijf in dit element het onderwerp of doel van de pagina.</p>
+
+
+
+            <p>In de code ziet dat er zo uit:</p>
+
+
+
+            <div class="awp__code-block">
+              <pre class="line-numbers language-html" tabindex='0'>
+                    <code class="language-html">
+                      <script type="text/plain" class="language-html">
+                        <html lang="nl">
+              <head>
+                <title>WCAG.nl - Digitale toegankelijkheid voor iedereen</title>
+                ...
+              </head>
+            ...
+            </html>
+                      </script>
+                    </code>
+                  </pre>
+            </div>
+
+
+          </div>
         </details>
         <details class="teksten-tekst alle-tekst">
           <summary>Gebruik koppen die het onderwerp of doel van de onderliggende tekst beschrijven</summary>
@@ -338,7 +392,7 @@
     <section class="footer-tel">
       <section id="back-to-top">
         <a href="#logo">
-          <div id="back-up">
+          <div class="back-up">
             <svg width="45" height="45" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M15 20H9V12H4.16L12 4.16L19.84 12H15V20Z" fill="white" />
             </svg>
