--- a/index.html
+++ b/index.html
@@ -20,7 +20,33 @@
 
     <h1 class="header_title">Jouw website voor iedereen toegankelijk</h1>
     <section class="intro">
-      <p>hallo</p>
+      <div class="intro-sect">
+        <h2>Is uw website al digitaal toegankelijk voor iedereen?</h2>
+
+        <p>Dat moet al of moet binnen 2 jaar! Voor overheden is dit al verplicht. En vanaf 2025 moet iedere nieuwe
+          website
+          en app digitaal toegankelijk zijn.</p>
+      </div>
+
+      <div class="intro-sect">
+        <h2>Wat kunt u doen om uw website toegankelijk te maken?</h2>
+
+        <p>De Vervoerregio Amsterdam heeft samen met studenten van de Hogeschool van Amsterdam een checklist ontwikkeld
+          waarin op eenvoudige wijze wordt uitgelegd wat hierbij komt kijken en welke stappen u kunt nemen om uw website
+          en app toegankelijk te maken.</p>
+      </div>
+
+      <div class="intro-sect">
+        <h2>Wat is de wettelijke achtergrond?</h2>
+
+        <p>Nederland zijn er ca. 2 miljoen mensen met een beperking. Als deze mensen uw website of app niet kunnen
+          gebruiken, dan zorgt dat dat deze mensen worden uitgesloten van de samenleving. Medio 2025 wordt om die reden
+          door de Europese Unie de European Accessibility Act (EAA) of Europese Toegankelijkheidswet ingevoerd. De wet
+          zorgt ervoor dat digitale barrières worden verwijderd voor mensen met een beperking. De eisen zijn gebaseerd
+          op
+          de Web Content Accessibility Guidelines (WCAG) van het World Wide Web Consortium (W3C).</p>
+      </div>
+
     </section>
   </header>
   <main>
